# skillforge-ai

./: README.md  dataset_test.json
app/: .gitignore  Cargo.toml  Dioxus.toml
app/assets/: main.css  tailwind.css
app/src/: main.rs  models.rs  server_functions.rs  utils.rs
app/src/pages/: create_roadmap.rs  dashboard.rs  landing.rs  login.rs  mod.rs  profile.rs  roadmap_view.rs  signup.rs
app/static/: index.html
app/static/dashboard/: index.html
data_collection_and_processing/: .gitignore
data_collection_and_processing/data_merger_and_cleaner/: Cargo.toml
data_collection_and_processing/data_merger_and_cleaner/src/: main.rs
data_collection_and_processing/data_processor/: Cargo.toml
data_collection_and_processing/data_processor/src/: main.rs
data_collection_and_processing/yt_data_collector/: integrated_scraper_with_llm.py  llm_enhanced_processor.py  requirements.txt
database_url_enricher/: .gitignore  Cargo.toml
database_url_enricher/src/: main.rs
frontend/: .gitignore  Cargo.toml
frontend/src/: main.rs
server/: .gitignore  Cargo.toml
server/src/: main.rs
