[package]
name = "database_url_enricher"
version = "0.2.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2.6.0", features = ["kv-rocksdb"] }
anyhow = "1"
quick-xml = "0.31"
flate2 = "1.0"                                                        # For decompressing .xml.gz sitemaps
strsim = "0.10"                                                       # For fuzzy string matching
dashmap = "5.5"                                                       # For concurrent sitemap storage
urlencoding = "2"
rand = "0.8"
scraper = "0.18"
futures = "0.3"
